[BUG #4826] Force block formatting context for ".content" to fix clipped content in Firefox

--- a/framework/source/resource/qx/mobile/less/_layout.less
+++ b/framework/source/resource/qx/mobile/less/_layout.less
@@ -48,6 +48,16 @@
         .box-flex(0);
 }
 
+.content {
+  /* Force block formatting context so that elements are laid out
+   * "one after the other", see http://www.w3.org/TR/CSS21/visuren.html#block-formatting
+   *
+   * Fixes clipped content in Firefox.
+   *
+   */
+  overflow: hidden;
+}
+
 .boxSpacer {
         .box-flex(1);
 }
